--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,20 @@
 spring.application.name=interviewprep
 
-# PostgreSQL from Render env variables
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+# PostgreSQL (Render - force IPv4 with hostaddr)
+spring.datasource.url=jdbc:postgresql://35.227.164.209:5432/interview_db_m4d3?sslmode=require
+spring.datasource.username=interview_db_m4d3_user
+spring.datasource.password=w5Yr4XOLBRDykzDEwlMmlKj5NC9aeqre
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA config
+# Hikari connection pool (safe for free tier)
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.connection-timeout=30000
+
+# Hibernate/JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Optional
+# Server port
 server.port=8080
