--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=interviewprep
 
-# PostgreSQL (Render - force IPv4 with hostaddr)
-spring.datasource.url=jdbc:postgresql://35.227.164.209:5432/interview_db_m4d3?sslmode=require
-spring.datasource.username=interview_db_m4d3_user
-spring.datasource.password=w5Yr4XOLBRDykzDEwlMmlKj5NC9aeqre
+# PostgreSQL (Render external URL, uses env variables)
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hikari connection pool (safe for free tier)
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.connection-timeout=60000
 
 # Hibernate/JPA
 spring.jpa.hibernate.ddl-auto=update
