prepare backend for Render deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,15 @@
 spring.application.name=interviewprep
 
-# PostgreSQL (Render external URL, uses env variables)
+# ✅ PostgreSQL (Render uses env variables)
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hikari connection pool (safe for free tier)
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.connection-timeout=60000
-
-# Hibernate/JPA
-spring.jpa.hibernate.ddl-auto=validate
+# ✅ Hibernate/JPA
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Server port
+# ✅ Server
 server.port=8080
